# quad-suspended-load

./: .gitignore  .gitmodules  README.md
gui/: CMakeLists.txt  ChooseController.xml  ChooseSimulator.xml  LACPlugin.xml  RCDisplay.xml  README.md  TrajectorySelection.xml  package.xml  plugin.xml  pointInput.xml  positionPlot.xml  saver.xml  saver_mavros.xml  setup.py  stepPlugin.xml  tabPlugin.xml  utility.xml
gui/config/: IrisPlot.perspective
gui/scripts/: ChooseController.py  ChooseSimulator.py  RCDisplay.py  TrajectorySelection.py  gui  pointInput.py  positionPlot.py  rqt_config_parser.sh  rqt_iris.py  saver.py  saver_mavros.py  step.py  tabbedGUI.py  term-pipe-r.sh  utility.py
gui/src/gui/: ChooseController.py  ChooseController.ui  ChooseSimulator.py  ChooseSimulator.ui  LinearAdaptativeControl.py  LinearAdaptativeControl.ui  MyPlugin.ui  RCDisplay.py  RCDisplay.ui  Step.ui  TrajectorySelection.py  TrajectorySelection.ui  pointInput.py  pointInput.ui  positionPlot.py  positionPlot.ui  rqt_iris.py  saver.py  saver.ui  saver_mavros.py  saver_mavros.ui  skeleton.py  skeleton.ui  step.py  tabbedGUI.py  tabbedGUI.ui  utility.py  utility.ui
gui/src/gui/ActionFiles/: some_waiting.txt
gui/src/gui/DXFFiles/: kampala.dxf
quad_control/: CMakeLists.txt  package.xml
quad_control/launch/: dual_quad_mavros.launch  iris1.launch  iris1_mavros.launch  iris1_mavros_vbad.launch  irises.launch  single_quad_mavros.launch
quad_control/msg/: Controller_State.msg  Num.msg  quad_cmd.msg  quad_state.msg  quad_state_and_cmd.msg
quad_control/scripts/: Controller0.py  Controller1.py  Controller2.py  ControllerACRO.py  ControllerNeutral.py  Controllers_Parameters.py  Quad_Simulator.py  Simulator0.py  Simulator1.py  Simulator2.py  Simulator_Parameters.py  SomeFunctions.py  TestMavros.py  TestRotMatrix.py  ToSEE  Trajectory0.py  Trajectory1.py  command_planner.py  controller_load.py  cycle_quad_control.py  cycle_quad_control_mavros.py  mocap_source.py  untitled
quad_control/scripts/mocap/: CMakeLists.txt  README.md  package.xml  setup.py
quad_control/scripts/mocap/launch/: mocap.launch
quad_control/scripts/mocap/msg/: QuadPosition.msg  QuadPositionDerived.msg  QuadPositionDerivedExt.msg  Record.msg
quad_control/scripts/mocap/scripts/: mocap_source.py  recorder.py  ros_mocap.py  ros_mocap_sim.py  rviz_mocap.py  sml_setup.py
quad_control/scripts/mocap/srv/: Bodies.srv  BodyData.srv
quad_control/srv/: Controller_Srv.srv  MocapBodies.srv  Mocap_Id.srv  PlannerStart.srv  SaveData.srv  Simulator_Srv.srv  StartSim.srv  TrajDes_Srv.srv
