<?xml version="1.0"?>
<package>
  <name>gui</name>
  <version>0.0.0</version>
  <description>The gui package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lwalter@todo.todo">lwalter</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gui</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui_py</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <rqt_gui plugin="${prefix}/stepPlugin.xml"/>
    <rqt_gui plugin="${prefix}/pointInput.xml"/>
    <rqt_gui plugin="${prefix}/RCDisplay.xml"/>
    <rqt_gui plugin="${prefix}/LACPlugin.xml"/>
    <rqt_gui plugin="${prefix}/utility.xml"/>
    <rqt_gui plugin="${prefix}/tabPlugin.xml"/>
    <rqt_gui plugin="${prefix}/positionPlot.xml"/>
    <rqt_gui plugin="${prefix}/saver.xml"/>
    <rqt_gui plugin="${prefix}/saver_mavros.xml"/>
    <rqt_gui plugin="${prefix}/TrajectorySelection.xml"/>
    <rqt_gui plugin="${prefix}/ChooseController.xml"/>
    <rqt_gui plugin="${prefix}/ChooseSimulator.xml"/>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
